deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: webapp:1
        # for local development against minikube registry
        #imagePullPolicy: Never        
        ports:
        - containerPort: 8080
        resources:
           limits:
             memory: 32Mi
             cpu: 125m
           requests:
             memory: 32Mi
             cpu: 125m
        livenessProbe:
          failureThreshold: 3
          httpGet:
             path: /health
             port: 8080
             scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 8080
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: hello-app
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hello-service-cip
#   labels:
#     app: hello-app
# spec:
#   type: ClusterIP
#   ports:
#     # the port that this service should serve on
#     - port: 80
#       targetPort: 8080
#   # label keys and values that must match in order to receive traffic for this service
#   selector:
#     app: hello-app
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
spec:
  rules:
  - host: hello-app.cluster-ingress-subdomain
    http:
      paths:
      - backend:
          serviceName: hello-service-cip
          servicePort: 80
        path: /
  tls:
  - hosts:
    - hello-app.cluster-ingress-subdomain
    secretName: cluster-ingress-secret
